@@ -149,13 +149,12 @@
           {
             "name": "job_id",
             "in": "path",
-            "description": "Slurm Job ID",
+            "description": "Slurm JobID",
             "required": true,
             "style": "simple",
             "explode": false,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -176,7 +175,7 @@
             }
           },
           "default": {
-            "description": "job not found"
+            "description": "job matching JobId not found"
           }
         }
       },
@@ -195,8 +194,7 @@
             "style": "simple",
             "explode": false,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -240,8 +238,7 @@
             "style": "simple",
             "explode": false,
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           },
           {
